clusters/talos-cluster/pad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pad-service
  namespace: pad
  labels:
    app: pad
spec:
  selector:
    app: pad
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
