clusters/talos-cluster/pad/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pad-route
  namespace: pad
  labels:
    app: pad
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: cloudflare-gateway
  hostnames:
    - "pad.maix.ovh"
    - "roy.theossaibrothers.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pad-service
          port: 80
          weight: 100
